2008-12-08
	* New function of OrderByTime() for computing time order explicitly.
	* "Show Uncoded files only" popup menu will sort the uncoded file by imported time.
	* Add "Show Coded files only" popup menu in Files Tabs and F-cat Tab.
	* "Sort by ..." in the all the popup-menus call OrderByTime to sort the data.

2008-12-07
	* Better handler the issue of write permission in new project and open project button
	* new function/button to backup project
	* fix bug in close project button
	* Popup menu of Files Tab: "Show uncoded files only" (useful when there are large number of files).
	
2008-12-06 (rc2 of v1.6)
	* bugfix of Freecode rename button and others.
	* Memo in Popup menu in Files Tab.
	* Enhance Mark buttons, so it will not save duplicated information in database.
	* New function relation() for caculating relation between two coding.
	* Improve ViewFileFun() so the codings are highlighted when a file is opened.
	* Add some popup menus.
	* Improve pdelete(),list.deleted() and undelete(). New function of CleanProject().

2008-12-05
	* New functionality of add memo to File category and Code category.
	* Reorganize the memo for Cases.  Now opem case memo by double-click or popup menu
	* Unmark button for cases.
	* Add Settings Tab, so user can change settings easily.
	
2008-12-04
	* Better handler colors for coding and case-mark. Now can customize colors for coding-mark 
	(set .rqda$fore.col, default is "blue") and case-mark (set .rqda$back.col, default is "gray92").
	* Add selected file to File-category by popup menu in Files Tab.
	* Popup menu in Cases tab to link files with selected case.
	* Drop selected Files from Files.of.This.Case Widget by clicking popu menu.
	
2008-12-03
	* Attached file to case by pop-up menu in Files Tab.
	* Now can open associated files of a case from Cases Tab.
	* new function of write.FileList() to import a batch of files.

	
2008-12-01
	* enhance the rename buttons.